# FreeRTOS-Sim

./: .gitignore  CMakeLists.txt  Makefile  apt_requirements.sh  build_with_docker_freertos-sim.sh  build_with_docker_freertos-sim_assigment_1.sh  build_with_docker_freertos-sim_project.sh  docker_build_freertos-sim_assigment_1.sh  docker_build_freertos-sim_project.sh
Assigments/Assigment_1/: CMakeLists.txt  main.c
Project/: CMakeLists.txt
docker/: Dockerfile  Dockerfile.alpine  README.md  build_image.sh  hello.c  run.sh
docker/handling_permission/: Dockerfile
docker/scripts/: build.sh
docker/src/: CMakeLists.txt
docker/src/FreeRTOSv9.0.0/: CMakeLists.txt
docker/src/FreeRTOSv9.0.0/Source/: CMakeLists.txt
